# Projet-C-

./: SetUp
projetC++/: CMakeLists.txt
projetC++/include/: Block.h  Blockchain.h  Cryptography.h  Exceptions.h  Transaction.h
projetC++/include/GUI/: MainWindow.h  TransactionDialog.h
projetC++/src/: Block.cpp  Blockchain.cpp  Cryptography.cpp  Transaction.cpp  main.cpp
projetC++/src/GUI/: MainWindow.cpp  TransactionDialog.cpp
projetC++/tests/: TransactionTests.cpp
